Fix nav click target issue on mobile.

--- a/media/main.css
+++ b/media/main.css
@@ -249,6 +249,7 @@ ul#nav {
 ul#nav li {
   display: inline-block;
   position: relative;
+  margin-bottom: 2em;
 }
 
 ul#nav li.active a {
